add functionlity for time runing

--- a/index.html
+++ b/index.html
@@ -8,30 +8,49 @@
 </head>
 <body>
     <head>
-        <h2 class="header">Welcome To My Page</h2>
+      <head>
+         <h2 class="header">Welcome To My Page</h2>
+     </head>
     </head>
-    <main>
+    <main class="discrition">
        <div class="profile-picture">
         <img src="image/20240202_135830.jpg" alt="profile picture">
        </div>
        <div class="my-details">
           <div class="detail">
              <span class="lable">SlackName :</span>
-             <span class="value">Ochula</span>
+             <span class="value" data-testid="Ochewola">Ochewola</span>
           </div>
           <div class="detail">
              <span class="lable">SlackEmail :</span>
-             <span class="value">victorjames408@gmail.com</span>
+             <span class="value" data-testid="victorjames408@gmail.com">victorjames408@gmail.com</span>
           </div>
           <div class="detail">
              <span class="lable">CurrentTime:</span>
-             <span class="value">21:00 pm</span>
+             <span class="value" data-testid="currentTimeUTC">21:00 pm</span>
           </div>
           <div class="detail">
-             <span class="lable">CurrentDate:</span>
-             <span class="value">01/07/2024</span>
+             <span class="lable">CurrentDay:</span>
+             <span class="value" data-testid="currentDay">Monday</span>
+          </div>
+
+          <div>
+             <h2 class="goal-header">Tech Goals For Next Two Years</h2>
+             <div class="goals">
+               <ol>
+                  <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta nostrum nesciunt nam recusandae tenetur quibusdam voluptatem. Beatae nam, nobis nisi ducimus illum aliquid ratione quibusdam dolor, necessitatibus, ex et.</li>
+                  <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam necessitatibus, nihil perspiciatis iusto enim exercitationem culpa voluptatum saepe debitis expedita itaque incidunt velit nisi. Quas, neque! Totam excepturi consectetur incidunt.</li>
+                  <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum enim molestias quae dolorum, quas error aliquam id doloribus modi aperiam officia suscipit nemo, optio dolor rerum laudantium molestiae mollitia corporis!</li>
+               </ol>
+             </div>
           </div>
        </div>
     </main>
+
+    <footer>
+      <a href="http://hng.tech/learn" target="_blank">Vist Hng Website to learn more</a>
+    </footer>
+
+    <script src="javascript.js"></script>
 </body>
 </html>
