--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
        <div class="my-details">
           <div class="detail">
              <span class="lable">SlackName :</span>
-             <span class="value" data-testid="Ochewola">ochewola</span>
+             <span class="value" data-testid="slackDisplayName">ochewola</span>
           </div>
           <div class="detail">
              <span class="lable">SlackEmail :</span>
-             <span class="value" data-testid="victorjames408@gmail.com">victorjames408@gmail.com</span>
+             <span class="value" data-testid="slackEmail">victorjames408@gmail.com</span>
           </div>
           <div class="detail">
              <span class="lable">CurrentTime:</span>
