fix: resixed my image and removed the styling on the image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <main class="discrition">
        <div class="profile-picture">
-        <img data-testid="slackProfilePicture" src="image/20240202_135830.jpg" alt="profile picture">
+        <img data-testid="slackProfilePicture" src="image/Untitled design (2).jpg" alt="profile picture">
        </div>
        <div class="my-details">
           <div class="detail">
